create project code base

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Hello</title>
+    <script type="application/javascript" src="app/test.js"></script>
+</head>
+<body>
 It works!
+</body>
+</html>
