parse articles from markdown

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello</title>
-    <script type="application/javascript" src="app/test.js"></script>
+    <script type="application/javascript" src="app/data.js"></script>
+    <script type="application/javascript" src="app/main.js"></script>
 </head>
 <body>
 It works!
