render picture, youtube preview (wip)

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hello</title>
     <script type="application/javascript" src="app/data.js"></script>
     <script type="application/javascript" src="app/main.js"></script>
+    <link href="app/styles.css" rel="stylesheet"/>
 </head>
-<body>
-It works!
-</body>
+<body></body>
 </html>
