vimeo preview, add aspect ratio container for previews

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <title>Hello</title>
     <script type="application/javascript" src="app/data.js"></script>
     <script type="application/javascript" src="app/main.js"></script>
+    <script src="https://player.vimeo.com/api/player.js"></script>
     <link href="app/styles.css" rel="stylesheet"/>
 </head>
 <body></body>
 </html>
+
+
+
