remove blog mode, try map rendering

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hello</title>
+    <script src="https://maps.api.2gis.ru/2.0/loader.js?pkg=full"></script>
     <script type="application/javascript" src="app/data.js"></script>
     <script type="application/javascript" src="app/main.js"></script>
     <script src="https://player.vimeo.com/api/player.js"></script>
