--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     <script src="https://player.vimeo.com/api/player.js"></script>
     <link href="app/styles.css" rel="stylesheet"/>
 </head>
-<body></body>
+<body>
+    <header>
+        <h1>Лебедев Илья - разработчик ПО <a href="https://t.me/lebedec">@lebedec</a> </h1>
+    </header>
+</body>
 </html>
 
 
