--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
     <link href="app/styles.css" rel="stylesheet"/>
 </head>
 <body>
-    <header>
-        <h1>Лебедев Илья - разработчик ПО <a href="https://t.me/lebedec">@lebedec</a> </h1>
-    </header>
+<header class="profile">
+    <img alt="Фотография Лебедева Ильи" src="static/html/ava.png"/>
+    <div class="bio">
+        <span>Лебедев Илья</span>
+        <a href="https://t.me/lebedec">@lebedec</a>
+    </div>
+</header>
+<div id="container" class="container"></div>
 </body>
 </html>
 
