--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hello</title>
+    <title>Лебедев Илья - Разработчик программных решений</title>
+    <meta property="og:image" content="./static/html/ava.png" />
+    <meta property="og:title" content="Лебедев Илья - Разработчик программных решений" />
     <script src="https://maps.api.2gis.ru/2.0/loader.js?pkg=full"></script>
     <script type="application/javascript" src="app/data.js"></script>
     <script type="application/javascript" src="app/main.js"></script>
