--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Лебедев Илья - Разработчик программных решений</title>
+    <title>Лебедев Илья</title>
     <meta property="og:image" content="./static/html/ava.png" />
-    <meta property="og:title" content="Лебедев Илья - Разработчик программных решений" />
+    <meta property="og:image:width" content="640" />
+	<meta property="og:image:height" content="640" />
+    <meta property="og:title" content="Лебедев Илья" />
+    <meta property="og:description" content="Профессиональный программист, технический лидер и энтузиаст в разработке интересных IT проектов." />
     <script src="https://maps.api.2gis.ru/2.0/loader.js?pkg=full"></script>
     <script type="application/javascript" src="app/data.js"></script>
     <script type="application/javascript" src="app/main.js"></script>
