--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Лебедев Илья</title>
-    <meta property="og:type" content="article" />
+    <meta property="og:type" content="object" />
     <meta property="og:title" content="Лебедев Илья" />
-    <meta property="og:description" content="Вер2. Профессиональный программист, технический лидер и энтузиаст в разработке интересных IT проектов." />
+    <meta property="og:description" content="Вер3. Профессиональный программист, технический лидер и энтузиаст в разработке интересных IT проектов." />
     <meta property="og:image" content="./static/html/preview.png" />
-    <meta property="og:image:width" content="1000" />
-	<meta property="og:image:height" content="500" />
+    <meta property="og:image:width" content="1200" />
+	<meta property="og:image:height" content="600" />
     <meta property="og:image:type" content="image/png" />
     <script src="https://maps.api.2gis.ru/2.0/loader.js?pkg=full"></script>
     <script type="application/javascript" src="app/data.js"></script>
