--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <title>Лебедев Илья</title>
     <meta property="og:type" content="object" />
     <meta property="og:title" content="Лебедев Илья" />
-    <meta property="og:description" content="Вер3. Профессиональный программист, технический лидер и энтузиаст в разработке интересных IT проектов." />
+    <meta property="og:description" content="Вер5. Профессиональный программист, технический лидер и энтузиаст в разработке интересных IT проектов." />
     <meta property="og:image" content="./static/html/preview.png" />
     <meta property="og:image:width" content="1200" />
 	<meta property="og:image:height" content="600" />
     <meta property="og:image:type" content="image/png" />
+    <meta property="twitter:image:src" content="./static/html/preview.png" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Лебедев Илья" />
+    <meta property="twitter:description" content="Вер5Tw. Профессиональный программист, технический лидер и энтузиаст в разработке интересных IT проектов." />
     <script src="https://maps.api.2gis.ru/2.0/loader.js?pkg=full"></script>
     <script type="application/javascript" src="app/data.js"></script>
     <script type="application/javascript" src="app/main.js"></script>
