--- a/index.html
+++ b/index.html
@@ -3,21 +3,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Лебедев Илья</title>
-    <meta property="og:type" content="object" />
-    <meta property="og:title" content="Лебедев Илья" />
-    <meta property="og:description" content="Профессиональный программист и энтузиаст в разработке интересных IT проектов." />
-    <meta property="og:image" content="./static/html/preview.png" />
-    <meta property="og:image:width" content="640" />
-	<meta property="og:image:height" content="640" />
-    <meta property="og:image:type" content="image/png" />
-<!--    <meta property="twitter:image:src" content="./static/html/preview.png" />-->
-<!--    <meta property="twitter:card" content="summary_large_image" />-->
-<!--    <meta property="twitter:title" content="Лебедев Илья" />-->
-<!--    <meta property="twitter:description" content="Профессиональный программист, технический лидер и энтузиаст в разработке интересных IT проектов." />-->
+    <meta property="og:type" content="object"/>
+    <meta property="og:title" content="Лебедев Илья"/>
+    <meta property="og:description"
+          content="Профессиональный программист и энтузиаст в разработке интересных IT проектов."/>
+    <meta property="og:image" content="./static/html/preview.png"/>
+    <meta property="og:image:width" content="640"/>
+    <meta property="og:image:height" content="640"/>
+    <meta property="og:image:type" content="image/png"/>
+    <!--    <meta property="twitter:image:src" content="./static/html/preview.png" />-->
+    <!--    <meta property="twitter:card" content="summary_large_image" />-->
+    <!--    <meta property="twitter:title" content="Лебедев Илья" />-->
+    <!--    <meta property="twitter:description" content="Профессиональный программист, технический лидер и энтузиаст в разработке интересных IT проектов." />-->
     <script src="https://maps.api.2gis.ru/2.0/loader.js?pkg=full"></script>
     <script type="application/javascript" src="app/data.js"></script>
     <script type="application/javascript" src="app/main.js"></script>
     <script src="https://player.vimeo.com/api/player.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
+          rel="stylesheet">
     <link href="app/styles.css" rel="stylesheet"/>
 </head>
 <body>
