--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 <header class="profile">
-    <img alt="Фотография Лебедева Ильи" src="static/html/ava.png"/>
+    <img alt="Фотография Лебедева Ильи" src="static/html/ava.jpg"/>
     <div class="bio">
         <span>Лебедев Илья</span>
         <a href="https://t.me/lebedec">@lebedec</a>
